# University_Management_System

./: .gitignore  README.md  hasib_note.txt  info.txt  info2.txt  jihan_note.txt  lina_note.txt
Backend/: .env  db.sqlite3  pyproject.toml
Backend/Management/: admin.py  authentication.py  permissions.py  renderers.py  throtling.py  urls.py  utils.py
Backend/Management/migrations/: 0001_initial.py  0002_department_session_examcommittee_teacher_and_more.py  0002_rename_father_student_father_name_and_more.py  0003_alter_course_options_rename_credits_course_credit_and_more.py  0003_faculty_department_faculty.py  0004_alter_session_options_and_more.py  0004_sessioncourse_sessioncourseteacher_and_more.py  0005_remove_student_is_approved_and_more.py  0005_teacherinvitation.py  0006_alter_teacherinvitation_email_and_more.py  0006_sessioncourseteacher_created_at_and_more.py  0007_remove_courseassessment_course_and_more.py  0008_alter_courseassessment_group_studentassessmentmark.py  0009_attendancesession_studentattendance_and_more.py  0010_courseassessment_is_attendance_and_more.py  0011_remove_courseassessment_group_and_more.py  0012_sessioncourseresult.py  0013_sessioncourse_status_delete_sessioncourseresult.py  0014_alter_department_faculty_coursematerial_and_more.py  0015_remove_coursematerial_is_visible.py  0016_courseannouncement_courseannouncementfile.py  0017_assignment_assignmentfile_assignmentsubmission_and_more.py
Backend/Management/models/: __init__.py  academic.py  auth_models.py  course.py  course_content.py  (+1 more)
Backend/config/: settings.py  urls.py
(+33 files in other folders)
