[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.7",
    "django-anymail>=15.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "django-filter>=26.1",
    "django-jazzmin>=3.0.5",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.30.0",
    "pillow>=12.3.0",
]
